<resources>
    <string name="app_name">MyCalc</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="clear">Delete</string>
    <string name="add">Add</string>
    <string name="sub">Sub</string>
    <string name="mul">Mul</string>
    <string name="div">Div</string>
    <string name="submit">Submit</string>
    <string name="EE">Enter Expression</string>
    <string name="Result">Result</string>
    <string name="exit">Exit</string>

</resources>
